testsuite/tests/robustness/main_wrong_sources_no_crash/test.out
test.gpr:3:08: error: attribute "Main" accepts only simple names
